# MORTIS

./: README.md  app.py
voice_clone_video_synthesis/: .gitignore  Dockerfile  README.md  env_instruction.md  main.py  pyproject.toml  start.sh
voice_clone_video_synthesis/indextts/: cli.py  infer.py  infer_v2.py
voice_clone_video_synthesis/indextts/gpt/: model.py  model_v2.py  transformers_beam_search.py  transformers_generation_utils.py  transformers_gpt2.py  transformers_modeling_utils.py
voice_clone_video_synthesis/indextts/s2mel/: hf_utils.py  optimizers.py  wav2vecbert_extract.py
voice_clone_video_synthesis/indextts/s2mel/dac/: __main__.py
voice_clone_video_synthesis/indextts/s2mel/dac/model/: base.py  dac.py  discriminator.py  encodec.py
voice_clone_video_synthesis/indextts/s2mel/dac/nn/: quantize.py
voice_clone_video_synthesis/indextts/s2mel/dac/utils/: __init__.py  decode.py  encode.py
voice_clone_video_synthesis/indextts/s2mel/modules/: commons.py  diffusion_transformer.py  encodec.py  flow_matching.py  length_regulator.py  quantize.py  rmvpe.py  wavenet.py
voice_clone_video_synthesis/indextts/s2mel/modules/.ipynb_checkpoints/: audio-checkpoint.py  commons-checkpoint.py  (+3 more)
voice_clone_video_synthesis/indextts/utils/: front.py  maskgct_utils.py  text_utils.py  utils.py
voice_clone_video_synthesis/src/: __init__.py  mixer.py  split_audio.py  voice_clone.py
voice_filter/: README.md  envs.sh  main.py  pyproject.toml  run_test.sh
voice_filter/config/: settings.py
voice_filter/src/: video_audio_split.py  voice_filter.py
(+68 files in other folders)
